Ajout de retour de ligne dans le sandbox

--- a/src/components/message/message.sandbox.html
+++ b/src/components/message/message.sandbox.html
@@ -32,11 +32,11 @@
     <m-message class="m-u--margin-top--l" title="Error" state="error" skin="page"></m-message>
     <m-message class="m-u--margin-top--l" title="Warning" state="warning" skin="page"></m-message>
     <m-message class="m-u--margin-top--l" title="Information" state="information" skin="page"></m-message>
-    <m-message class="m-u--margin-top--l" title="Success" skin="page">Bonjour</m-message>
+    <m-message class="m-u--margin-top--l" title="Ad labore ad ex do minim qui<br>eu aliquip aute non" state="confirmation" skin="page">Ad labore ad ex do minim qui eu aliquip aute non.</m-message>
 
-    <h2>Skin page-light</h2>
+    <h2>Skin dialog</h2>
     <m-message class="m-u--margin-top--l" skin="page-light" title="Error" state="error"></m-message>
     <m-message class="m-u--margin-top--l" skin="page-light" title="Warning" state="warning"></m-message>
     <m-message class="m-u--margin-top--l" skin="page-light" title="Information" state="information"></m-message>
-    <m-message class="m-u--margin-top--l" skin="page-light" title="Success">Bonjour</m-message>
+    <m-message class="m-u--margin-top--l" skin="page-light" title="Ad labore ad ex do minim qui<br>eu aliquip aute non" state="confirmation">Ad labore ad ex do minim qui eu aliquip aute non.</m-message>
 </div>
