MODUL-284 - Update error svg

--- a/src/components/error-template/error-template.html
+++ b/src/components/error-template/error-template.html
@@ -4,8 +4,7 @@
                   'm--is-state-warning': isStateWarning,
                   'm--is-state-error': isStateError,
                   'm--is-skin-default': isSkinDefault,
-                  'm--is-skin-light': isSkinLight,
-                  'm--no-svg-icon': !isSvg }">
+                  'm--is-skin-light': isSkinLight }">
     <header class="m-error-template__header">
         <h2 class="m-error-template__title"
             v-if="title"
