--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -13,6 +13,12 @@
         outline: none;
         padding: $m-spacing;
         font-weight: $m-font-weight--black;
+        display: flex;
+        align-items: center;
+
+        &__plus {
+            margin-right: $m-spacing--s;
+        }
 
         .m-menu.m--is-skin-light & {
             color: rgba($m-color--white, 0.7);
@@ -24,6 +30,7 @@
             color: $m-color--grey-light;
             background: $m-menu-color--skin-dark-bg-light;
             box-shadow: 0 1px 2px rgba($m-color--black, 0.5);
+            text-transform: uppercase;
         }
 
         .m-menu.m--is-open & {
