MODUL-285 - Manage empty allowed-extensions

--- a/src/components/file-upload/file-upload.sandbox.html
+++ b/src/components/file-upload/file-upload.sandbox.html
@@ -17,6 +17,9 @@
             <!-- <m-file-upload :rejected-extensions="['jpg', 'jpeg', 'png']"><button>Only rejected extensions</button></m-file-upload> -->
         </p>
         <p>
-            <m-file-upload :rejected-extensions="['jpg']" :allowed-extensions="['jpg', 'jpeg', 'png', 'mp4']"><button>Allowed and rejected extensions</button></m-file-upload>
+            <!-- <m-file-upload :rejected-extensions="['jpg']" :allowed-extensions="['jpg', 'jpeg', 'png', 'mp4']"><button>Allowed and rejected extensions</button></m-file-upload> -->
+        </p>
+        <p>
+            <m-file-upload :rejected-extensions="['jpg']" :allowed-extensions="[]"><button>Empty allowed</button></m-file-upload>
         </p>
 </div>
