--- a/src/components/file-upload/file-upload.html
+++ b/src/components/file-upload/file-upload.html
@@ -36,7 +36,7 @@
                 <m-file-select class="m-file-upload__drop-zone__instructions__button" skin="secondary" :multiple="maxFiles > 1 ? true : false" :store-name="storeName"
                     keep-store="true"></m-file-select>
             </div>
-            <p class="m-file-upload__drop-zone__format" v-if="allowedExtensions">
+            <p class="m-file-upload__drop-zone__format" v-if="hasAllowedExtensions">
                 <m-i18n class="m-file-upload__drop-zone__format__label" k="m-file-upload:format" :nb="allowedExtensions.length"></m-i18n>: {{fileExtensions}}</p>
         </div>
 
