MODUL-284 - MAJ largeur des icones en mode page-light

--- a/src/components/error-template/error-template.html
+++ b/src/components/error-template/error-template.html
@@ -17,7 +17,7 @@
                 v-if="isSvg"></div>
             <m-icon class="m-error-template__icon"
                     :name="iconNameProp"
-                    :size="imageSize"
+                    :size="propImageSize"
                     v-else></m-icon>
         </div>
     </header>
