--- a/src/components/message/message.sandbox.html
+++ b/src/components/message/message.sandbox.html
@@ -34,7 +34,7 @@
     <m-message class="m-u--margin-top--l" title="Information" state="information" skin="page"></m-message>
     <m-message class="m-u--margin-top--l" title="Titre contenant un retour<br>de ligne HTML" state="confirmation" skin="page">Ad labore ad ex do minim qui eu aliquip aute non.</m-message>
 
-    <h2>Skin dialog</h2>
+    <h2>Skin page-light</h2>
     <m-message class="m-u--margin-top--l" skin="page-light" title="Error" state="error"></m-message>
     <m-message class="m-u--margin-top--l" skin="page-light" title="Warning" state="warning"></m-message>
     <m-message class="m-u--margin-top--l" skin="page-light" title="Information" state="information"></m-message>
