fix video seek in the carousel

--- a/src/components/carousel/carousel.sandbox.html
+++ b/src/components/carousel/carousel.sandbox.html
@@ -1,5 +1,4 @@
 <div>
-    <!-- Sandbox template -->
     <h3>Carousel - Desktop version</h3>
     <p class="m-u--margin-bottom">The m-carousel in desktop version</p>
     <p>
@@ -69,6 +68,11 @@
     <p>
         <m-carousel style="height: 400px;" margin="0">
             <m-carousel-item>
+                <video controls="true" style="display: block; max-height: 300px; max-width: 300px;">
+                    <source id="mp4" src="http://grochtdreis.de/fuer-jsfiddle/video/sintel_trailer-480.mp4" type="video/mp4">
+                </video>
+            </m-carousel-item>
+            <m-carousel-item>
                 <img src="https://picsum.photos/300" alt="">
             </m-carousel-item>
             <m-carousel-item>
@@ -112,6 +116,11 @@
             </m-carousel-item>
             <m-carousel-item>
                 <img src="https://picsum.photos/500" alt="">
+            </m-carousel-item>
+            <m-carousel-item>
+                <video controls="true" style="display: block; max-height: 300px; max-width: 300px;" playsinline="true">
+                    <source id="mp4" src="http://grochtdreis.de/fuer-jsfiddle/video/sintel_trailer-480.mp4" type="video/mp4">
+                </video>
             </m-carousel-item>
         </m-carousel>
     </p>
