--- a/src/components/carousel/carousel.html
+++ b/src/components/carousel/carousel.html
@@ -1,3 +1,5 @@
-<v-touch class="m-carousel" @tap="onTap" @swipeleft="showNextItem" @swiperight="showPrevItem" :swipe-options="{direction: 'horizontal'}" tag="ul">
-    <slot></slot>
-</v-touch>
+<m-touch class="m-carousel" @tap="onTap" @swipeleft="showNextItem" @swiperight="showPrevItem" :swipe-options="{direction: 'horizontal'}">
+    <ul class="m-carousel__slider">
+        <slot></slot>
+    </ul>
+</m-touch>
