--- a/src/components/file-upload/file-upload.sandbox.html
+++ b/src/components/file-upload/file-upload.sandbox.html
@@ -1,33 +1,38 @@
 <div>
-    <!-- Sandbox template -->
-    <h3>File-upload</h3>
-    <p class="m-u--margin-bottom">
-        Allowed/Rejected extensions
-    </p>
-        <!-- <p>
-            <m-file-upload><button>No extension specified</button></m-file-upload>
-        </p>
-        <p>
-            <m-file-upload :allowed-extensions="['jpg', 'jpeg', 'png']"><button>Only allowed extensions</button></m-file-upload>
-        </p>
-        <p>
-            <m-file-upload :rejected-extensions="['jpg', 'jpeg', 'png']"><button>Only rejected extensions</button></m-file-upload>
-        </p> -->
-        <p>
-            <m-file-upload :rejected-extensions="['jpg', 'jpeg']" :allowed-extensions="['jpg', 'jpeg', 'png', 'mp4']"><button>Allowed and rejected extensions</button></m-file-upload>
-        </p>
-        <p>
-            <!-- <m-file-upload :rejected-extensions="['jpg']" :allowed-extensions="[]"><button>Allowed extensions defined but empty</button></m-file-upload> -->
-        </p>
-    <p>
-    <!-- <p class="m-u--margin-bottom">
-        Single/Multiple file(s) upload
-    </p>
-        <p>
-            <m-file-upload :allowed-extensions="['jpg', 'jpeg', 'png']" :max-files="1"><button>Single file upload</button></m-file-upload>
-        </p>
-        <p>
-            <m-file-upload :allowed-extensions="['jpg', 'jpeg', 'png']" :max-files="5"><button>Multiple files upload</button></m-file-upload>
-        </p>
-    </p> -->
+    <h2>File-upload</h2>
+
+        <div class="m-u--margin-bottom">
+            <h5>No extension specified</h5>
+            <m-file-upload><button>File upload</button></m-file-upload>
+        </div>
+
+        <div class="m-u--margin-bottom">
+            <h5>Allowed extensions only</h5>
+            <span>Allowed extensions: jpg, jpeg, png</span>
+            <m-file-upload :allowed-extensions="['jpg', 'jpeg', 'png']"><button>File upload</button></m-file-upload>
+        </div>
+
+        <div class="m-u--margin-bottom">
+            <h5>Rejected extensions only</h5>
+            <span>Rejected extensions: jpg, jpeg, png</span>
+            <m-file-upload :rejected-extensions="['jpg', 'jpeg', 'png']"><button>File upload</button></m-file-upload>
+        </div>
+
+        <div class="m-u--margin-bottom">
+            <h5>Allowed and rejected extensions</h5>
+            <span>Allowed extensions: jpg, jpeg, png, mp4</span>
+            <br>
+            <span>Rejected extensions: jpg, jpeg</span>
+            <m-file-upload :rejected-extensions="['jpg', 'jpeg']" :allowed-extensions="['jpg', 'jpeg', 'png', 'mp4']"><button>File upload</button></m-file-upload>
+        </div>
+
+        <div class="m-u--margin-bottom">
+            <h5>Single file upload</h5>
+            <m-file-upload :allowed-extensions="['jpg', 'jpeg', 'png']" :max-files="1"><button>File upload</button></m-file-upload>
+        </div>
+
+        <div class="m-u--margin-bottom">
+            <h5>Multiple files upload</h5>
+            <m-file-upload :allowed-extensions="['jpg', 'jpeg', 'png']" :max-files="5"><button>File upload</button></m-file-upload>
+        </div>
 </div>
