Update font-size in title

--- a/src/components/button/button.sandbox.html
+++ b/src/components/button/button.sandbox.html
@@ -7,7 +7,19 @@
         </br>From <a href="https://github.com/ulaval/modul-components/pull/000" target="blank">PR description</a>
         -->
     </p>
-    <p>
-        <m-button><!-- Test case --></m-button>
-    </p>
+    <m-button>Je suis un bouton</m-button>
+
+    <h1>Je suis un H1</h1>
+    <h2>Je suis un H2</h2>
+    <h3>Je suis un H3</h3>
+    <h4>Je suis un H4</h4>
+    <h5>Je suis un H5</h5>
+    <h6>Je suis un H6</h6>
+
+    <m-textarea value="Je suis un H1" tag-style="h1"></m-textarea><br>
+    <m-textarea value="Je suis un H2" tag-style="h2"></m-textarea><br>
+    <m-textarea value="Je suis un H3" tag-style="h3"></m-textarea><br>
+    <m-textarea value="Je suis un H4" tag-style="h4"></m-textarea><br>
+    <m-textarea value="Je suis un H5" tag-style="h5"></m-textarea><br>
+    <m-textarea value="Je suis un H6" tag-style="h6"></m-textarea><br>
 </div>
