--- a/src/components/input-style/input-style.scss
+++ b/src/components/input-style/input-style.scss
@@ -472,6 +472,7 @@ $m-input-style--padding: 4px !default;
 
             @media (max-width: $m-mq--max--s) {
                 font-size: $m-font-size--mobile-h4;
+                font-weight: $m-font-weight--black;
             }
         }
     }
