--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -61,6 +61,7 @@
 
         @media (max-width: $m-mq--max--s) {
             font-size: $m-font-size--mobile-h4;
+            font-weight: $m-font-weight--black;
         }
     }
 
