--- a/src/components/error-browser-not-supported/error-browser-not-supported.html
+++ b/src/components/error-browser-not-supported/error-browser-not-supported.html
@@ -1,2 +1,2 @@
-<m-error-template :state="state" :svg-name="svgName" :title="title" :hints="isMqMinS ? hintsDesktop : hintsMobile" :links="isMqMinS ? linksDesktop : linksMobile">
-</m-error-template>
+<m-page-message :state="state" :svg-name="svgName" :title="title" :hints="isMqMinS ? hintsDesktop : hintsMobile" :links="isMqMinS ? linksDesktop : linksMobile">
+</m-page-message>
