--- a/src/components/error-config-not-supported/error-config-not-supported.html
+++ b/src/components/error-config-not-supported/error-config-not-supported.html
@@ -1,2 +1,2 @@
-<m-error-template :state="state" :svg-name="svgName" :title="title" :hints="hints" :links="links">
-</m-error-template>
+<m-page-message :state="state" :svg-name="svgName" :title="title" :hints="hints" :links="links">
+</m-page-message>
