--- a/src/components/error-technical-difficulty/error-technical-difficulty.html
+++ b/src/components/error-technical-difficulty/error-technical-difficulty.html
@@ -1,4 +1,4 @@
-<m-error-template class="m-error-technical-difficulty":state="state" :svg-name="svgName" :title="title" :hints="hints" :links="links">
+<m-page-message class="m-error-technical-difficulty":state="state" :svg-name="svgName" :title="title" :hints="hints" :links="links">
     <m-accordion skin="light" icon-size="small">
         <m-i18n slot="header" k="m-error-technical-difficulty:details"></m-i18n>
         <p class="m-error-technical-difficulty__browser"><strong>{{'m-error-technical-difficulty:browser' | f-m-i18n}}: </strong>{{userAgent}}</p>
@@ -13,4 +13,4 @@
             <pre>{{error.stack}}</pre>
         </m-panel>
     </m-accordion>
-</m-error-template>
+</m-page-message>
