MODUL-428 - Rename page-message by message-page

--- a/src/components/error-access-denied/error-access-denied.html
+++ b/src/components/error-access-denied/error-access-denied.html
@@ -1,2 +1,2 @@
-<m-page-message :state="state" :svg-name="svgName" :title="title" :hints="hints" :links="links">
-</m-page-message>
+<m-message-page :state="state" :svg-name="svgName" :title="title" :hints="hints" :links="links">
+</m-message-page>
