--- a/src/components/error-page-not-found/error-page-not-found.html
+++ b/src/components/error-page-not-found/error-page-not-found.html
@@ -1,2 +1,2 @@
-<m-page-message :state="state" :svg-name="svgName" :title="title" :hints="hints" :links="links">
-</m-page-message>
+<m-message-page :state="state" :svg-name="svgName" :title="title" :hints="hints" :links="links">
+</m-message-page>
