--- a/src/components/message-page/message-page.html
+++ b/src/components/message-page/message-page.html
@@ -1,42 +1,42 @@
-<article class="m-page-message"
+<article class="m-message-page"
          :class="{'m--is-state-confirmation': isStateConfirmation,
                   'm--is-state-information': isStateInformation,
                   'm--is-state-warning': isStateWarning,
                   'm--is-state-error': isStateError,
                   'm--is-skin-default': isSkinDefault,
                   'm--is-skin-light': isSkinLight }">
-    <header class="m-page-message__header">
-        <h2 class="m-page-message__title"
+    <header class="m-message-page__header">
+        <h2 class="m-message-page__title"
             v-if="title"
             v-html="title"></h2>
-        <div class="m-page-message__icon-container"
+        <div class="m-message-page__icon-container"
              aria-hidden="true">
-            <div class="m-page-message__icon"
+            <div class="m-message-page__icon"
                 :style="styleObject"
                 v-html="svg"
                 v-if="isSvg"></div>
-            <m-icon class="m-page-message__icon"
+            <m-icon class="m-message-page__icon"
                     :name="iconNameProp"
                     :size="propImageSize"
                     v-else></m-icon>
         </div>
     </header>
-    <div class="m-page-message__body"
+    <div class="m-message-page__body"
          v-if="hasBody">
-        <p class="m-page-message__hints"
+        <p class="m-message-page__hints"
             :class="{'m--no-content': !hasLinksAndSlot}"
             v-if="hasHints"
             v-for="hint in hints"
             ref="hint">{{hint}}</p>
-        <div class="m-page-message__details"
+        <div class="m-message-page__details"
             v-if="$slots.default">
             <slot></slot>
         </div>
-        <ul class="m-page-message__links"
+        <ul class="m-message-page__links"
             v-if="hasLinks">
             <li ref="link"
                 v-for="link in links">
-                <m-link class="m-page-message__link"
+                <m-link class="m-message-page__link"
                         icon-name="m-svg__chevron--right"
                         mode="link" :url="link.url"
                         :target="isTargetExternal(link.external)">{{link.label}}</m-link>
