--- a/src/components/message/message.html
+++ b/src/components/message/message.html
@@ -30,11 +30,11 @@
             {{'m-message:close' | f-m-i18n}}
         </m-icon-button>
     </div>
-    <m-page-message class="m-message__page"
+    <m-message-page class="m-message__page"
                     v-else
                     :state="state"
                     :skin="skinPageValue"
                     :title="title">
         <slot></slot>
-    </m-page-message>
+    </m-message-page>
 </div>
