Add some examples in the sandbox for readonly property

--- a/src/components/radio-group/radio-group.sandbox.html
+++ b/src/components/radio-group/radio-group.sandbox.html
@@ -40,4 +40,17 @@
             <m-radio value="4" style="font-size:2em">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque ipsam<br>placeat dolores esse libero ipsum, officiis asperiores!</m-radio>
         </m-radio-group>
     </p>
+
+    <h3>
+        Readonly mode
+    </h3>
+    <p>From <a href="https://jira.dti.ulaval.ca/browse/MODUL-283">MODUL-283</a></p>
+    <p>
+        <m-radio-group>
+            <m-radio value="Choix de réponse 1" :read-only="true">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque ipsam<br>placeat dolores esse libero ipsum, officiis asperiores!</m-radio>
+            <m-radio value="Choix de réponse 2" :read-only="true" checked="true"></m-radio>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque ipsam<br>placeat dolores esse libero ipsum, officiis asperiores!</m-radio>
+            <m-radio value="Choix de réponse 3" :read-only="true">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque ipsam<br>placeat dolores esse libero ipsum, officiis asperiores!</m-radio>
+        </m-radio-group>
+    </p>
+
 </div>
