--- a/src/components/radio-group/radio-group.sandbox.html
+++ b/src/components/radio-group/radio-group.sandbox.html
@@ -45,11 +45,20 @@
         Readonly mode
     </h3>
     <p>From <a href="https://jira.dti.ulaval.ca/browse/MODUL-283">MODUL-283</a></p>
+    <h4>Group read-only true and childs read-only false</h4>
     <p>
-        <m-radio-group>
-            <m-radio value="Choix de réponse 1" :read-only="true">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque ipsam<br>placeat dolores esse libero ipsum, officiis asperiores!</m-radio>
-            <m-radio value="Choix de réponse 2" :read-only="true" :checked="true">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque ipsam<br>placeat dolores esse libero ipsum, officiis asperiores!</m-radio>
-            <m-radio value="Choix de réponse 3" :read-only="true">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque ipsam<br>placeat dolores esse libero ipsum, officiis asperiores!</m-radio>
+        <m-radio-group :read-only="true">
+            <m-radio value="Choix de réponse 1" :read-only="false" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque ipsam<br>placeat dolores esse libero ipsum, officiis asperiores!</m-radio>
+            <m-radio value="Choix de réponse 2"  checked="true"></m-radio>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque ipsam<br>placeat dolores esse libero ipsum, officiis asperiores!</m-radio>
+            <m-radio value="Choix de réponse 3" :read-only="false" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque ipsam<br>placeat dolores esse libero ipsum, officiis asperiores!</m-radio>
+        </m-radio-group>
+    </p>
+    <h4>Group read-only false and childs read-only true</h4>
+    <p>
+        <m-radio-group :read-only="false">
+            <m-radio value="Choix de réponse 1" :read-only="false" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque ipsam<br>placeat dolores esse libero ipsum, officiis asperiores!</m-radio>
+            <m-radio value="Choix de réponse 2"  checked="true"></m-radio>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque ipsam<br>placeat dolores esse libero ipsum, officiis asperiores!</m-radio>
+            <m-radio value="Choix de réponse 3" :read-only="true" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque ipsam<br>placeat dolores esse libero ipsum, officiis asperiores!</m-radio>
         </m-radio-group>
     </p>
 
