--- a/src/components/radio/radio.scss
+++ b/src/components/radio/radio.scss
@@ -96,7 +96,7 @@ $m-radio--color-disabled: $m-color--disabled !default;
         &.m--is-disabled {
             .m-radio {
                 &__wrap {
-                    cursor: not-allowed;
+                    cursor: default;
                 }
 
                 &__input {
@@ -271,7 +271,7 @@ $m-radio--color-disabled: $m-color--disabled !default;
         &.m--is-disabled {
             .m-radio {
                 &__label {
-                    cursor: not-allowed;
+                    cursor: default;
                     color: $m-radio--color-disabled;
                     background: $m-color--white;
                     border-color: $m-radio--color-disabled;
