Add descriptions in sandbox

--- a/src/components/tree/tree.sandbox.html
+++ b/src/components/tree/tree.sandbox.html
@@ -1,7 +1,11 @@
 <div>
-    <h2>Default tree</h2>
+    <h2>Default tree (no file icons)</h2>
     <div style="width: 50%; float:left;">
-        <h2>No selection</h2>
+        <h2>Selection disabled</h2>
+        <p>
+                Selected file : none</br>
+                Open folder : Title 3
+        </p>
         <p>
             <m-tree :tree="tree" selection-mode="0" ></m-tree>
         </p>
@@ -9,6 +13,10 @@
 
     <div style="width: 50%; float:left;">
         <h2>Single node selection</h2>
+        <p>
+                Selected file : /Title 1/Subtitle 1</br>
+                Open folder : Title 3
+        </p>
         <p>
             <m-tree :tree="tree" :selected-nodes="currentFile2" @select="onSelect"></m-tree>
         </p>
@@ -18,7 +26,7 @@
 
     <h2>File tree</h2>
     <div style="width: 50%; float:left;">
-        <h3>No file selection</h3>
+        <h3>Selection disabled</h3>
         <p>
             <m-tree :tree="fileTree" selection-mode="0" :icons="true"></m-tree>
         </p>
@@ -26,6 +34,10 @@
 
     <div style="width: 50%; float:left;">
         <h3>Single file selection</h3>
+        <p>
+                Selected file : /folder 1/folder 2/index.html</br>
+                Open folder : none
+        </p>
         <p>
             <m-tree :tree="fileTree" selection-mode="1" :selected-nodes="currentFile" :icons="true" @select="onSelect"></m-tree>
         </p>
