--- a/src/components/radio-group/radio-group.sandbox.html
+++ b/src/components/radio-group/radio-group.sandbox.html
@@ -57,7 +57,7 @@
     <p>
         <m-radio-group>
             <m-radio value="Choix de réponse 1" :read-only="false">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque ipsam<br>placeat dolores esse libero ipsum, officiis asperiores!</m-radio>
-            <m-radio value="Choix de réponse 2" :read-only="false">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque ipsam<br>placeat dolores esse libero ipsum, officiis asperiores!</m-radio>
+            <m-radio value="Choix de réponse 2" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque ipsam<br>placeat dolores esse libero ipsum, officiis asperiores!</m-radio>
             <m-radio value="Choix de réponse 3" :read-only="true">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque ipsam<br>placeat dolores esse libero ipsum, officiis asperiores!</m-radio>
             <m-radio value="Choix de réponse 4" :read-only="false">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque ipsam<br>placeat dolores esse libero ipsum, officiis asperiores!</m-radio>
         </m-radio-group>
