--- a/src/components/limit-text/limit-text.scss
+++ b/src/components/limit-text/limit-text.scss
@@ -3,7 +3,7 @@
 .m-limit-text {
     &__content {
         & > :first-child {
-            margin-top: 0;
+            margin-top: 0 !important;
         }
     }
 }
