--- a/src/components/dropdown/dropdown.sandbox.html
+++ b/src/components/dropdown/dropdown.sandbox.html
@@ -307,7 +307,7 @@
     <p>
         <h3>Dropdown-item avec une value numerique</h3>
         <p class="m-u--margin-bottom">
-            From <a href="https://github.com/ulaval/modul-components/pull/458" target="blank" label="When internalValue is not a string, trim() can't be apply">Pull request</a>
+            From <a href="https://github.com/ulaval/modul-components/pull/458" target="blank">PR #458</a> : It's impossible to select a dropdown option when it is a numeric value
 
             <!-- if relevant, add link to PR
             </br>From <a href="https://github.com/ulaval/modul-components/pull/458" target="blank" label="PR description</a> -->
