--- a/src/components/radio/radio.html
+++ b/src/components/radio/radio.html
@@ -11,7 +11,7 @@
               'm--is-inline': propInline,
               'm--is-align-center': propVerticalAlign === 'center' }">
     <input class="m-radio__hidden" :value="value" type="radio" v-model="model" :id="radioID" :name="propName"
-           @focus="onFocus" @blur="onBlur" :disabled="propDisabled || propReadOnly" :aria-hidden="propDisabled" :readonly="propReadOnly">
+           @focus="onFocus" @blur="onBlur" :disabled="propDisabled || propReadOnly" :aria-hidden="propDisabled">
     <label class="m-radio__wrap" :for="radioID" ref="label">
         <span class="m-radio__input" aria-hidden="true" v-if="!isButton()" :style="{ 'margin-top': propRadioMarginTop }"></span>
         <span class="m-radio__label">
