--- a/src/styles/base/_layout.scss
+++ b/src/styles/base/_layout.scss
@@ -84,5 +84,6 @@
     @include m-spacing-factory();
 
     // exemple
-    // padding: m-spacing(xs);
+    // voir var-layout
+    // padding: m-spacing(xs) + m-spacing(s);
 }
