--- a/src/components/carousel-item/carousel-item.html
+++ b/src/components/carousel-item/carousel-item.html
@@ -1,3 +1,3 @@
-<li class="m-carousel-item" :class="{ 'm--has-no-transition': hasNoTransition }" :style="{transform : translate, left: margin + 'px', right: margin + 'px'}">
+<li class="m-carousel-item" :class="{ 'm--no-animation': animNotReady }" :style="{transform : translate, left: margin + 'px', right: margin + 'px'}">
     <slot></slot>
 </li>
