--- a/src/components/carousel-item/carousel-item.scss
+++ b/src/components/carousel-item/carousel-item.scss
@@ -5,7 +5,6 @@
     z-index: 1;
     top: 0;
     bottom: 0;
-    transition: transform $m-transition-duration--xl;
     background-color: #000;
     display: flex;
     align-items: center;
@@ -16,7 +15,7 @@
         max-height: 100%;
     }
 
-    &.m--has-no-transition {
-        transition: none;
+    &:not(.m--no-animation) {
+        transition: transform $m-transition-duration--xl;
     }
 }
