--- a/src/components/rich-text-editor/adapter/vue-froala.scss
+++ b/src/components/rich-text-editor/adapter/vue-froala.scss
@@ -51,8 +51,6 @@
         .fr-box.fr-basic .fr-element {
             padding: $m-spacing;
             font-weight: $m-font-weight;
-            border-left-color: $m-color--grey-light;
-            border-right-color: $m-color--grey-light;
             word-wrap: break-word;
             -moz-user-select: text; // Dirty fix for text selection in firefox if the rich-text is in a draggable container.
         }
@@ -98,11 +96,11 @@
         }
 
         .fr-box.fr-basic .fr-element {
-            transition: padding $m-transition-duration--l ease, border-color $m-transition-duration--l ease-in-out;
+            transition: padding $m-transition-duration--l ease;
             padding: 0;
             min-height: unset;
-            border-left: 1px solid transparent;
-            border-right: 1px solid transparent;
+            border-left: 1px solid $m-color--grey-light;
+            border-right: 1px solid $m-color--grey-light;
             overflow-x: unset;
         }
 
