Move the fullscreen icon to the right

--- a/src/components/rich-text-editor/adapter/vue-froala.scss
+++ b/src/components/rich-text-editor/adapter/vue-froala.scss
@@ -7,6 +7,10 @@
 
     /deep/ .fas { font-style: normal; }
 
+    /deep/ button[id^=fullscreen] {
+        float: right;
+    }
+
     &.m--is-dirty {
         overflow: unset;
     }
