MODUL-468 - harmonize the colors of the icons

--- a/src/components/rich-text-editor/adapter/vue-froala.scss
+++ b/src/components/rich-text-editor/adapter/vue-froala.scss
@@ -135,6 +135,14 @@
 
             button {
                 color: $m-color--grey-darker;
+
+                svg {
+                    fill: $m-color--grey-darker;
+                }
+
+                &::after {
+                    border-top-color: $m-color--grey-darker !important;
+                }
             }
 
             button[data-cmd*='specialCharacters'] {
