--- a/src/components/tooltip/tooltip.sandbox.html
+++ b/src/components/tooltip/tooltip.sandbox.html
@@ -24,9 +24,7 @@
     <h3>Tooltip with a link inside without link tag</h3>
     <p class="m-u--margin-bottom">
         The tooltip has a link inside.
-        <!-- if relevant, add link to PR
-        </br>From <a href="https://github.com/ulaval/modul-components/pull/000" target="blank">PR description</a>
-        -->
+        </br>From <a href="https://github.com/ulaval/modul-components/pull/482" target="blank">PR 482</a>
     </p>
     <p>
         <m-tooltip>https://fr.wikipedia.org/wiki/Cath%C3%A9drale_de_Brasilia</m-tooltip>
