MODUL-466 - Sandbox modification

--- a/src/components/file-upload/file-upload.sandbox.html
+++ b/src/components/file-upload/file-upload.sandbox.html
@@ -44,7 +44,7 @@
 
         <div class="m-u--margin-bottom">
             <h5>Replacement file</h5>
-            <span>Prop max-files: 10 but should consider only 1</span>
+            <span>Prop max-files: 10 - should allowed only one</span>
             <m-file-upload :file-replacement="true" :max-files="10"><m-button>File upload</m-button></m-file-upload>
         </div>
 
