--- a/src/components/dialog/dialog.sandbox.html
+++ b/src/components/dialog/dialog.sandbox.html
@@ -7,9 +7,19 @@
         </br>From <a href="https://github.com/ulaval/modul-components/pull/000" target="blank">PR description</a>
         -->
     </p>
-    <m-dialog title="Titre de la fenêtre">
-        <m-button slot="trigger">Ouvrir la fenêtre</m-button>
+    <m-dialog title="Dialog title">
+        <m-button slot="trigger">Open the dialog</m-button>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, velit? Temporibus et ipsa, voluptatibus cum, ducimus rerum ex officia minima culpa maiores architecto tempore aut, consequuntur consectetur possimus tempora recusandae!
-        <div slot="footer">Pied de page</div>
+        <div slot="footer">Footer</div>
+    </m-dialog>
+    <h3>Trigger the dialog with custom title on close button</h3>
+    <p class="m-u--margin-bottom">
+        When the button is press, the dialog pop in the window with the custom title on the close button.
+        </br>From <a href="https://github.com/ulaval/modul-components/pull/000" target="blank">PR description</a>
+    </p>
+    <m-dialog title="Dialog title" close-title="Close this nice dialog">
+        <m-button slot="trigger">Open the dialog</m-button>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, velit? Temporibus et ipsa, voluptatibus cum, ducimus rerum ex officia minima culpa maiores architecto tempore aut, consequuntur consectetur possimus tempora recusandae!
+        <div slot="footer">Footer</div>
     </m-dialog>
 </div>
