--- a/src/components/dialog/dialog.sandbox.html
+++ b/src/components/dialog/dialog.sandbox.html
@@ -15,7 +15,7 @@
     <h3>Trigger the dialog with custom title on close button</h3>
     <p class="m-u--margin-bottom">
         When the button is press, the dialog pop in the window with the custom title on the close button.
-        </br>From <a href="https://github.com/ulaval/modul-components/pull/000" target="blank">PR description</a>
+        </br>From <a href="https://github.com/ulaval/modul-components/pull/491" target="blank">PR Tooltip on the icon button to close the dialog #491</a>
     </p>
     <m-dialog title="Dialog title" close-title="Close this nice dialog">
         <m-button slot="trigger">Open the dialog</m-button>
